# hls-vi-historical-orchestration

./: .dockerignore  .gitignore  README.md  cdk.json  env.sample  pyproject.toml
.github/workflows/: deploy.yml  dev-deploy.yml  main.yml  mcp-dev-deploy.yml  prod-deploy.yml  test.yml
cdk/: app.py  settings.py  stack.py
cdk/hls_constructs/: __init__.py  athena_logs_database.py  aws_batch_infra.py  aws_batch_job.py
docs/: reporting.md  runbook.md  system-design.md
lambdas/: common.py  job_monitor.py  job_requeuer.py  queue_feeder.py
lambdas/common/: __init__.py  aws_batch.py  granule_inventory.py  granule_logger.py  granule_tracker.py  models.py
lambdas/inventory_converter/: handler.py
lambdas/job_monitor/: handler.py
lambdas/job_requeuer/: handler.py
lambdas/queue_feeder/: handler.py
scripts/: bootstrap-dotenv.sh  format  lint  test
scripts/admin/: progress-report.py  redrive_failures.py  submit_granule_processing_events.py
src/common/: aws_batch.py  granule_logger.py  granule_tracker.py  models.py
src/edl_credential_rotator/: handler.py
src/inventory_converter/: handler.py
src/job_monitor/: handler.py
src/job_requeuer/: handler.py
src/queue_feeder/: handler.py
stack/: app.py  settings.py  stack.py
stack/hls_constructs/: aws_batch_infra.py  aws_batch_job.py
tests/: conftest.py  test_edl_credential_rotator.py  test_inventory_converter.py  test_job_monitor.py  test_queue_feeder.py  test_requeuer.py
tests/common/: test_aws_batch.py  test_granule_inventory.py  test_granule_logger.py  test_granule_tracker.py  test_models.py
tests/fixtures/: job_detail_failed_error.json  job_detail_failed_spot.json  job_state_change_failure.json
