[project]
name = "hls-vi-historical-orchestration"
version = "0.1.0"
description = "Orchestration of the historical processing for the HLS-VI product."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.37.28",
]

[dependency-groups]
dev = [
    "boto3-stubs[batch,s3]>=1.37.36",
    "moto>=5.1.3",
    "mypy>=1.15.0",
    "pytest>=8.3.5",
    "pytest-cov>=6.1.1",
    "pytest-lazy-fixtures>=1.1.2",
    "ruff>=0.11.4",
]
deploy = [
    "aws-cdk-lib>=2.188.0",
    "constructs>=10.4.2",
    "pydantic-settings>=2.8.1",
]

[tool.pytest.ini_options]
testpaths = [
    "tests"
]

[tool.pytest.ini_options]
pythonpath = ["lambdas"]

[tool.ruff]
fix = true
line-length = 88

[tool.mypy]
files = ["cdk", "tests"]
plugins = ["pydantic.mypy"]
pretty = true
strict = true
show_error_code_links = true
show_error_context = true
