[project]
name = "hls-vi-historical-orchestration"
version = "0.1.0"
description = "Orchestration of the historical processing for the HLS-VI product."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "s3pathlib>=2.3.2",
]


[dependency-groups]
lambda = [
    "boto3>=1.37.28",
]
dev = [
    "boto3-stubs[batch,s3,sqs]>=1.37.36",
    "moto>=5.1.3",
    "mypy>=1.15.0",
    "pytest>=8.3.5",
    "pytest-cov>=6.1.1",
    "pytest-lazy-fixtures>=1.1.2",
    "ruff>=0.11.4",
]
deploy = [
    "aws-cdk-aws-lambda-python-alpha>=2.191.0a0",
    "aws-cdk-lib>=2.188.0",
    "constructs>=10.4.2",
    "pydantic-settings>=2.8.1",
]
pandas = [
    # Use "aws-sdk-pandas" (aka awswrangler) because they ship a Lambda Layer
    # with really small builds for Pandas and PyArrow
    #
    # When upgrading, remember to upgrade the version in the CDK stack
    # (variable "sdk_for_pandas_layer")
    "awswrangler~=3.11.0",
    # Installed by awswrangler, but listed here for our own record keeping...
    "pandas>=2,<3",
    "pyarrow>=18",
]

[tool.uv]
default-groups = ["dev", "lambda"]

[tool.pytest.ini_options]
testpaths = [
    "tests"
]
norecursedirs = ["cdk.out"]

[tool.pytest.ini_options]
pythonpath = ["lambdas"]

[tool.ruff]
fix = true
line-length = 88

[tool.mypy]
files = ["cdk", "tests"]
plugins = ["pydantic.mypy"]
pretty = true
strict = true
show_error_code_links = true
show_error_context = true
