[project]
name = "hls-vi-historical-orchestration"
version = "0.1.0"
description = "Orchestration of the historical processing for the HLS-VI product."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "s3pathlib>=2.3.2",
]

[dependency-groups]
dev = [
    "boto3-stubs[batch,s3,sqs]>=1.37.36",
    "moto>=5.1.3",
    "mypy>=1.15.0",
    "pandas-stubs>=2.2.3.250308",
    "pyarrow-stubs>=17.19",
    "pytest>=8.3.5",
    "pytest-cov>=6.1.1",
    "pytest-lazy-fixtures>=1.1.2",
    "ruff>=0.11.4",
    "pandas>=2,<3",
    "pydantic-settings>=2.8.1",
    "aws-lambda-typing>=2.20.0",
]
deploy = [
    "aws-cdk-aws-lambda-python-alpha>=2.191.0a0",
    "aws-cdk-lib>=2.188.0",
    "constructs>=10.4.2",
]
arrow = [
    "pyarrow>=18.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/common", "src/job_feeder", "src/job_monitor", "src/queue_feeder"]

[tool.uv]
default-groups = ["dev"]
package = true

[tool.pytest.ini_options]
testpaths = [
    "tests"
]
addopts = "--cov=src --cov-report=term-missing"
norecursedirs = ["cdk.out"]

[tool.ruff]
fix = true
line-length = 88

[tool.ruff.lint]
extend-select = ["I"]

[tool.ruff.lint.isort]
known-first-party = ["common", "inventory_converter", "job_monitor", "job_requeuer", "queue_feeder"]

[tool.mypy]
files = ["cdk", "src", "tests"]
plugins = ["pydantic.mypy"]
pretty = true
strict = true
show_error_code_links = true
show_error_context = true

[[tool.mypy.overrides]]
module = "s3pathlib"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "boto_session_manager"
ignore_missing_imports = true
